<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:background="@drawable/background"
    android:padding="15dp"
    tools:ignore="ExtraText">

    <!--Adaptive Icons-->
    <ImageView
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        android:src="@mipmap/ic_launcher_round"
        android:contentDescription="@string/todo" />

    <!--Title-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="@color/black"
        android:shadowDx="5"
        android:shadowDy="5"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/teaching_assistant"

        />

    <!--My Name-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/by_tom_gardner"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:shadowColor="@color/black"
        android:shadowDx="1"
        android:shadowDy="1"
        />


</LinearLayout>